fix: nav link spacing

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ p, li {
 
 .nav-link {
   color: #4062BB;
+  padding-right: 10px;
 }
 
 .nav-link:hover {
